Fix alignment and wrapping issues in the new form styles.
The new CSS form components had an issue where the field input area
(field widget and help text) would wrap below the label if the input
area's contents wrap. There's no easy solution if we stick with
blocks/inline-blocks for these elements, but fortunately, table-based
layout gives us exactly what we want.

This change updates `.rb-c-form-field__input` and
`.rb-c-form-field__label` to use `display: table-cell` when in aligned
and desktop mode. This will let us keep the input area aligned next to
the label area, with the wrapping occurring entirely within the input
area in a natural way.

Testing Done:
Tested on some forms with a variety of inputs with and without wrapped
content in desktop and in mobile modes, making sure that the alignment
stayed and the content wrapped correctly.

Tested this in Chrome, Firefox, and Edge.

Reviewed at https://reviews.reviewboard.org/r/10867/

--- a/reviewboard/static/rb/css/ui/forms.less
+++ b/reviewboard/static/rb/css/ui/forms.less
@@ -219,6 +219,17 @@ textarea {
   padding: 0;
 
   &.-is-aligned {
+    /*
+     * The goal is to align the fields alongside the labels without the
+     * input/help text area wrapping below the label when that content wraps.
+     * We want to keep that area aligned.
+     *
+     * The very easiest, safest way to do this is to use table-based layout,
+     * which will turn on table's alignment and wrapping rules.
+     *
+     * We only need to set `display: table-cell` for the aligned parts:
+     * .rb-c-form-field__label and .rb-c-form-field__input.
+     */
     #rb-ns-ui.screen.on-width-gte(@_form-vars[@aligned-screen-min-width], {
       #rb-ns-ui.form.set-labels-width(@_form-vars[@aligned-label-width]);
 
@@ -227,17 +238,32 @@ textarea {
           @_form-vars[@aligned-wide-label-width]);
       }
 
-      .rb-c-form-field.-has-input-first .rb-c-form-field__label {
-        width: auto;
-        margin-top: 0;
+      .rb-c-form-field {
+        &.-has-input-first {
+          display: block;
+
+          .rb-c-form-field__input {
+            display: inline-block;
+          }
+
+          .rb-c-form-field__label {
+            display: inline-block;
+            width: auto;
+            margin-top: 0;
+          }
+        }
       }
 
       .rb-c-form-field__label {
-        display: inline-block;
+        display: table-cell;
         margin-bottom: 0;
 
         /* Help align the labels with most input content. */
         margin-top: 4px;
+      }
+
+      .rb-c-form-field__input {
+        display: table-cell;
       }
     });
   }
@@ -498,6 +524,7 @@ textarea {
    */
   &__input {
     display: inline-block;
+    vertical-align: top;
 
     /* Radio buttons and multi-select checkboxes. */
     > ul {
